--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
 		"node_modules",
 		"./node_modules",
 		"./node_modules/*",
-		"./node_modules/@types/node/index.d.ts",
+		"./node_modules/@types/node/index.d.ts"
 	]
 }
