--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,7 +50,10 @@
 		"react/jsx-indent-props": [0],
 		"import/no-unresolved": [0],
 		"import/prefer-default-export": [0],
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", "tsx", "ts"] }],
+		"react/jsx-filename-extension": [
+			1,
+			{ "extensions": [".js", ".jsx", "tsx", "ts"] }
+		],
 		"@typescript-eslint/no-unused-vars": [1],
 		"@typescript-eslint/no-var-requires": [1],
 		"@typescript-eslint/no-explicit-any": [1]
