feat сделал главную страницу + извлечение ключевых слов с помощью 1. yake 2. nlp 3. извлечение именнованных сущностей 4. извлечение ключевых слов из кавычек

--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -47,6 +47,7 @@
 		"import/extensions": [0],
 		"comma-dangle": [0],
 		"react/jsx-one-expression-per-line": [0],
+		"react/no-array-index-key": [0],
 		"operator-linebreak": [0],
 		"no-shadow": [0],
 		"jsx-quotes": ["error", "prefer-single"],
